small change to albumservice. Add beans.xml to try fix wildfly errors...